add HATEOAS links in responses with UserDto in user-service.
